2006-10-05 [colin]	1.89.1cvs6

	* src/vcal_manager.c
		Set Message-ID on sent invitations

2006-10-04 [colin]	1.89.1cvs5

	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Color people who didn't respond to invitations
		Add Past/Today/Tomorrow/This week and Later items
		in the message list, and make events children of
		these items. Mark Today and Tomorrow so that the
		view selects them if they're present. 

2006-10-04 [wwp]	1.89.1cvs4

	* src/vcal_prefs.c
		Remove label's trailing ':' in prefs. Suggested by
		Fabien Vantard <fzzzzz@gmail.com>.

2006-09-29 [colin]	1.89.1cvs3

	* src/vcal_folder.c
	* src/vcal_manager.c
		Optimise things a bit, and fix a leak

2006-09-27 [colin]	1.89.1cvs2

	* src/vcal_folder.c
		Fix wrong variable use. Patch by
		Ales Nosek <anosek@suse.cz>

2006-09-26 [colin]	1.89.1cvs1

	* src/plugin.c
	* src/vcal_meeting_gtk.c
		Follow SC 2.5.2cvs1 API change

2009-05-25 [paul]	1.89.1

	1.89.1 released

2006-09-25 [paul]	1.89.0cvs7

	* po/de.po
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/pt_BR.po
	* po/sk.po
		updated by Stephan Sachse, Ricardo Mones Lastra,
		Flammie Pirinen, Fabien Vantard, Frederico Goncalves
		Guimaraes, and Andrej Kacian

2006-09-23 [colin]	1.89.0cvs6

	* src/vcal_manager.c
		Workaround a strange crash reported to me.

2006-09-22 [ticho]	1.89.0cvs5

	* configure.ac
		Update required sylpheed-claws version to 2.4.0.200.

2006-09-21 [colin]	1.89.0cvs4

	* src/vcal_meeting_gtk.c
		Workaround possible GTK crash: remove selection
		clipboard before destroying widget, or GTK+-2.10
		dies. Thanks to Hiro.

2006-09-11 [wwp]	1.89.0cvs3

	* config.h.in
		remove generated file.

2006-09-09 [colin]	1.89.0cvs2

	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
		From RFC 2445: TZID is UTC not GMT, and
		DT* shouldn't contain TZID parameter when
		it is UTC.

2006-09-09 [colin]	1.89.0cvs1

	* src/vcal_meeting_gtk.c